--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "ws": "^8.14.2"
   },
   "devDependencies": {
