--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
